--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
