--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
-    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
@@ -30,7 +29,7 @@
     "@types/node": "^24.0.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,7 +37,6 @@
     "globals": "^16.3.0",
     "path": "^0.12.7",
     "postcss": "^8.5.6",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
